--- a/calculator/style.css
+++ b/calculator/style.css
@@ -31,6 +31,7 @@ body {
   border: 1px solid black;
   color: white;
   background-color: rgb(59, 59, 59);
+  box-shadow: inset 0px 0px 20px 5px rgba(0, 0, 0, 0.85);
 }
 
 .subTab {
@@ -67,8 +68,20 @@ body {
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.75);
 }
 
-.btn:hover {
+.num:hover {
   background-color: green;
+}
+
+.operators:hover {
+  background-color: rgb(91, 91, 221);
+}
+
+.equal:hover {
+  background-color: orange;
+}
+
+.del:hover {
+  background-color: red;
 }
 
 .span-two {
