--- a/battleShip/style.css
+++ b/battleShip/style.css
@@ -70,6 +70,13 @@ body {
   background-color: orange;
 }
 
+.main__settings {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px 10px;
+}
+
 .main__setting-reset {
   padding: 10px 15px;
   cursor: pointer;
@@ -81,6 +88,11 @@ body {
 .main__setting-gamemove {
   background-color: #fff;
   padding: 20px 30px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
 
 .footer {
