--- a/shoppingCart/src/component/catalogItem/catalogitem.module.css
+++ b/shoppingCart/src/component/catalogItem/catalogitem.module.css
@@ -3,8 +3,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
   padding: 10px;
+  background-color: blanchedalmond;
+  border: 3px solid rgb(119, 85, 22);
 }
 
 .cartItemImg {
@@ -15,5 +16,13 @@
 .cartItemBtn {
   width: 75%;
   padding: 5px 20px;
+  font-size: 16px;
+  font-weight: 900;
   cursor: pointer;
+  border: 3px solid rgb(119, 85, 22);
+}
+
+.cartItemBtn:hover {
+  color: white;
+  background-color: rgb(206, 130, 38);
 }
