--- a/shoppingCart/src/component/header/header.module.css
+++ b/shoppingCart/src/component/header/header.module.css
@@ -4,12 +4,13 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 15px;
+  background-color: blanchedalmond;
 }
 
 .headerLogo {
-  text-transform: uppercase;
   font-size: 32px;
-  letter-spacing: 0.3em;
+  font-weight: bold;
+  letter-spacing: 0.1em;
 }
 
 .headerBlock {
@@ -21,14 +22,17 @@
 .headerLi {
   margin: 0 20px;
   font-size: 24px;
+  font-weight: bold;
+  color: rgb(107, 69, 19);
   text-decoration: none;
   cursor: pointer;
 }
 
 .headerLiActive {
   margin: 0 20px;
-  color: red;
+  color: rgb(255, 0, 0);
   font-size: 24px;
+  font-weight: bold;
   text-decoration: none;
   cursor: pointer;
 }
