--- a/localLibrary/views/about.pug
+++ b/localLibrary/views/about.pug
@@ -1,4 +1,4 @@
 div(class="main__block") 
     h1(class="main__block-header") About
-    p This is TheOdinProject
-    p Project: Express 105: Forms And Deployment
+    p(class="main__block-p") This is TheOdinProject
+    p(class="main__block-p") Project: Express 105: Forms And Deployment
