--- a/localLibrary/public/style.css
+++ b/localLibrary/public/style.css
@@ -61,6 +61,73 @@ html {
   margin-bottom: 10px;
 }
 
+.main__block-p {
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+.main__block-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+  padding: 10px;
+}
+
+.main__block-input {
+  padding: 5px 15px;
+  margin-bottom: 10px;
+}
+
+.main__block-btn {
+  margin-top: 15px;
+  padding: 2px 10px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.main__block-update {
+  padding: 5px 15px;
+  border: 1px solid transparent;
+  cursor: pointer;
+}
+
+.main__block-update:focus {
+  border: 1px solid black;
+}
+
+.main__block-links {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  margin: 20px 0;
+}
+
+.main__block-link {
+  font-size: 22px;
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+
+.main__block-link:hover {
+  color: red;
+}
+
+.main__block-deleteBtn {
+  margin-left: 10px;
+  padding: 0 5px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.main__block-deleteBtn:hover {
+  background-color: black;
+  color: white;
+}
+
 .footer {
   margin: auto auto 0;
   padding: 10px 20px;
