--- a/localLibrary/views/allAuthor.pug
+++ b/localLibrary/views/allAuthor.pug
@@ -1,2 +1,5 @@
 div(class="main__block") 
     h1 All Author
+    each val in data
+        div(class="main__block-links") 
+            a(href=`/author/${val._id}`, class="main__block-link")= val.name
