--- a/localLibrary/views/allGenre.pug
+++ b/localLibrary/views/allGenre.pug
@@ -1,2 +1,5 @@
 div(class="main__block") 
     h1 All Genre
+    each val in data
+        div(class="main__block-links") 
+            a(href=`/genre/${val._id}`, class="main__block-link")= val.name
