inventoryApplication log+sign in/out

--- a/inventoryApplication/views/layout.pug
+++ b/inventoryApplication/views/layout.pug
@@ -9,6 +9,6 @@ html
                 include signup
             else if content == 'login' 
                 include login
-            else 
+            else if content == 'main'
                 include main 
         include footer
