--- a/membersOnly/views/header.pug
+++ b/membersOnly/views/header.pug
@@ -1,3 +1,7 @@
 header(class="header")
     div(class="container")
         h1 Header
+            li 
+                a(href="/signin") Sign Up 
+            li
+                a(href="/login") Login 
