--- a/membersOnly/views/layout.pug
+++ b/membersOnly/views/layout.pug
@@ -13,4 +13,6 @@ html
             include signout
         else if template == 'main'
             include main
+        else if template == 'home'
+            include home
         include footer  
