project blogApi create, delete post by id

--- a/blogApi/views/layout.pug
+++ b/blogApi/views/layout.pug
@@ -15,8 +15,12 @@ html
                 include signout
             else if content == 'profile'
                 include profile
-            else if content == 'main'
-                include main
             else if content == 'post'
                 include post
+            else if content == 'postId'
+                include postId
+            else if content == 'createpost'
+                include createpost
+            //- else if content == 'postId'
+            //-     include postId
         include footer
