--- a/blogApi/views/login.pug
+++ b/blogApi/views/login.pug
@@ -1,5 +1,6 @@
 div(class="wrapper__center")
     div(class="container")
+        a(href="/signin") Sign In 
         h1 Login
         form(action="/login", method="POST", class="main__form")
             input(type="email", name="email", class="main__form-input", placeholder="email") 
