--- a/blogApi/views/signin.pug
+++ b/blogApi/views/signin.pug
@@ -1,5 +1,6 @@
 div(class="wrapper__center")
     div(class="container")
+        a(href="/login") Login  
         h1 Sign In
         if error
             h2= error
