--- a/blogApi/public/style.css
+++ b/blogApi/public/style.css
@@ -47,6 +47,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 20px 30px;
 }
 
 .main__form-input {
@@ -54,6 +55,16 @@ body {
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 5px 20px;
+  border-radius: 10px;
+}
+
+.main__form-textarea {
+  width: 500px;
+  height: 300px;
+  resize: none;
+  margin: 20px 0;
+  padding: 10px;
+  font-size: 22px;
   border-radius: 10px;
 }
 
@@ -69,6 +80,11 @@ body {
   background-color: black;
 }
 
+.main__form-btn:focus {
+  color: aliceblue;
+  background-color: black;
+}
+
 .main__form-signout {
   margin-top: 20px;
   border-radius: 10px;
@@ -80,6 +96,113 @@ body {
 .main__form-signout:hover {
   color: aliceblue;
   background-color: black;
+}
+
+.main__form-signout:focus {
+  color: aliceblue;
+  background-color: black;
+}
+
+.main__posts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main__post {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.main__posts-btn {
+  margin: 10px 0;
+  padding: 5px 20px;
+  font-size: 24px;
+  color: white;
+  background-color: black;
+  text-decoration: none;
+  border: 3px solid black;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.main__posts-btn:hover {
+  background-color: white;
+  color: black;
+}
+
+.main__title {
+  font-size: 24px;
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+
+.main__title:hover {
+  background-color: grey;
+  color: white;
+}
+
+.post {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 25px;
+}
+
+.post__header {
+  margin-bottom: 20px;
+}
+
+.post__btn {
+  font-size: 20px;
+  color: black;
+  background-color: white;
+  text-decoration: none;
+  padding: 2px 10px;
+  border: 1px solid black;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.post__btn:hover {
+  color: white;
+  background-color: black;
+}
+
+.post__btn:focus {
+  color: white;
+  background-color: black;
+}
+
+.post__btn-delete {
+  margin: 20px 0;
+  padding: 2px 10px;
+  font-size: 15px;
+  color: black;
+  background-color: white;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.post__btn-delete:hover {
+  color: white;
+  background-color: black;
+}
+
+.post__btn-delete:focus {
+  color: white;
+  background-color: black;
+}
+
+.createform {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer {
