add create comment, profiles

--- a/blogApi/views/login.pug
+++ b/blogApi/views/login.pug
@@ -1,6 +1,8 @@
 div(class="wrapper__center")
     div(class="container")
-        a(href="/signin") Sign In 
+        div(class="main__form-btns")
+            a(href="/#", class="main__form-btn-disabled") Login  
+            a(href='/signin', class="main__form-btn-enable") Sign In
         h1 Login
         form(action="/login", method="POST", class="main__form")
             input(type="email", name="email", class="main__form-input", placeholder="email") 
