--- a/blogApi/public/style.css
+++ b/blogApi/public/style.css
@@ -85,6 +85,36 @@ body {
   background-color: black;
 }
 
+.main__form-btns {
+  display: flex;
+  flex-direction: row;
+}
+
+.main__form-btn-enable {
+  margin: 0 10px;
+  padding: 2px 10px;
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: white;
+  cursor: pointer;
+}
+
+.main__form-btn-disabled {
+  margin: 0 10px;
+  padding: 2px 10px;
+  opacity: 0.7;
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 10px;
+  cursor: not-allowed;
+}
+
 .main__form-signout {
   margin-top: 20px;
   border-radius: 10px;
@@ -203,6 +233,43 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.comment__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px 10px;
+}
+
+.comment__textarea {
+  padding: 10px;
+  border-radius: 10px;
+  width: 500px;
+  height: 200px;
+  resize: none;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.comment {
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0;
+  padding: 0 10px;
+}
+
+.comment__author {
+  margin-bottom: 10px;
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.comment__text {
+  font-size: 18px;
 }
 
 .footer {
