--- a/blogApi/views/postId.pug
+++ b/blogApi/views/postId.pug
@@ -8,5 +8,16 @@ div(class="wrapper")
             form(action=`/post/${pageContent._id}?_method=DELETE`, method="POST")
                 input(type="submit", value="DELETE", class="post__btn-delete")
             a(href="/", class="post__btn") Back 
+
+        div(class="comments")
+            form(action=`/post/${pageContent._id}/comment`, method="POST", class="comment__form") 
+                textarea(name="commentText", placeholder="Enter your comment", class="comment__textarea", minlength="1", maxlength="200")
+                input(type="submit", value="Post comment", class="main__form-btn") 
+            div(class="comments__section")
+                each val in pageContent.comments
+                    div(class="comment")
+                        a(href=`/profile/${val.user._id}`, class="comment__author")= val.user.email
+                        p(class="comment__text")= val.text 
+                        
     else 
         h2 Post not found
