--- a/odinBook/public/style.css
+++ b/odinBook/public/style.css
@@ -33,6 +33,16 @@ body {
   border-radius: 15px;
 }
 
+.container__form-textarea {
+  margin-bottom: 20px;
+  padding: 10px;
+  width: 500px;
+  height: 300px;
+  border-radius: 10px;
+  resize: none;
+  font-size: 20px;
+}
+
 .container__form-btn {
   padding: 2px 10px;
   font-size: 20px;
