--- a/odinBook/views/main.pug
+++ b/odinBook/views/main.pug
@@ -1,2 +1,10 @@
 section(class="index")
     h1 Index
+    div(class="posts")
+        if postContent.length > 0
+            each val in postContent 
+                div(class="post")
+                    a(href=`/post/${val._id}`)= val.title 
+                    p= val.text
+        else 
+            h2 No posts
